# json-schema-to-nickel

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  flake.nix  schema-test.ncl  test.schema.ncl
.github/workflows/: continuous-integration.ncl  continuous-integration.yml  generated-workflow.ncl  update-flake-lock.yml  util.ncl  workflow.ncl
examples/github-workflow/: README.md  ci.ncl  github-workflow.json  github-workflow.schema.ncl
examples/simple-schema/: README.md  schema-test.ncl  test.schema.json  test.schema.ncl
lib/: Nickel-pkg.ncl  arrays.ncl  error.ncl  main.ncl  numbers.ncl  predicates.ncl  records.ncl  strings.ncl
src/: contract.rs  contracts.rs  definitions.rs  extract.rs  intermediate.rs  lib.rs  main.rs  object.rs  predicates.rs  references.rs  schema.rs  transform.rs  traverse.rs  typ.rs  utils.rs
tests/: integration.rs  json_schema_test_suite_test.rs  transforms.rs
tests/integration/inputs/: record_contract.json  shadowing.json
tests/snapshots/: integration__tests__integration__inputs__record_contract.json.snap  integration__tests__integration__inputs__shadowing.json.snap  transforms__tests__transforms__inputs__inline_defs.json.snap  transforms__tests__transforms__inputs__inline_defs.json.snap.new  transforms__tests__transforms__inputs__nested_all_of.json.snap  transforms__tests__transforms__inputs__nested_all_of.json.snap.new
tests/transforms/inputs/: inline_defs.json  nested_all_of.json
