[package]
name = "json-schema-to-nickel"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>", "Viktor Kleen <viktor.kleen@tweag.io>"]
description = "Convert JSON schemas into Nickel contracts."
readme = "README.md"
homepage = "https://github.com/mtoohey31/json-schema-to-nickel"
repository = "https://github.com/mtoohey31/json-schema-to-nickel"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
fluent-uri = "0.1.4"
nickel-lang-core = { git = "https://github.com/tweag/nickel", rev = "refs/heads/master", default-features = false }

pretty = "^0.11"
schemars = "^0.8"
serde_json = "^1.0"
terminal_size = "^0.2"

[build-dependencies]
# TODO: make this definitionally the same as the non-build dependency
nickel-lang-core = { git = "https://github.com/tweag/nickel", rev = "refs/heads/master", default-features = false }

[dev-dependencies]
json_schema_test_suite = "^0.3"
lazy_static = "^1.4"
mockito = { version = "0.32.5", default-features = false }
schemars = "^0.8"
serde_json = "^1.0"
stringreader = "^0.1"
