[package]
name = "json-schema-to-nickel"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>", "Viktor Kleen <viktor.kleen@tweag.io>"]
description = "Convert JSON schemas into Nickel contracts."
readme = "README.md"
homepage = "https://github.com/mtoohey31/json-schema-to-nickel"
repository = "https://github.com/mtoohey31/json-schema-to-nickel"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
fluent-uri = "0.1.4"
miette = "7.5.0"
nickel-lang-core = { version = "0.10", default-features = false }
ordered-float = { version = "5.0.0", features = ["serde"] }

pretty = "^0.11"
regex-syntax = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "^1.0"
terminal_size = "^0.2"

[build-dependencies]
# TODO: make this definitionally the same as the non-build dependency
nickel-lang-core = { version = "0.10", default-features = false }

[dev-dependencies]
glob = "0.3.2"
insta = { version = "1.42.2", features = ["serde", "ron"] }
json_schema_test_suite = "^0.3"
lazy_static = "^1.4"
libtest-mimic = "0.8.1"
mockito = { version = "0.32.5", default-features = false }
schemars = "^0.8"
serde_json = "^1.0"
stringreader = "^0.1"

[[test]]
name = "transforms"
path = "tests/transforms.rs"
harness = false
